tests/ui/ferrocene/compiler-arguments/crate-type/crate-type_bin-no-main.rs
//@ check-fail
//@ compile-flags: --crate-type=bin

fn foo() {} //~ ERROR `main` function not found in crate

// ferrocene-annotations: um_rustc_crate_type
